<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/global_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGlobalColor"
    android:gravity="fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.santige.nuevaaplicacion.PersonListActivity">

    <LinearLayout
        android:id="@+id/midLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ibMenuBot"
        android:layout_below="@+id/ibMenu"
        android:orientation="vertical">

        <Button
            android:id="@+id/addPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_persona"
            android:textAlignment="center" />

        <ScrollView
            android:id="@+id/vscroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ibMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/titleGastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/tytlestyle"
            android:padding="10dp"
            android:text="@string/quienes_gastaron"
            android:textAlignment="center" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ibMenuBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/cTVBot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/gastos"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bottomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/continuar"
            android:textAlignment="inherit" />

    </LinearLayout>
</RelativeLayout>
